--- a/css/desktop.css
+++ b/css/desktop.css
@@ -7,7 +7,7 @@
 
 html {
 	scroll-behavior: smooth;
-  }
+}
 
 header { 
 	width: 100%; 
@@ -75,8 +75,9 @@ a {
 	text-align: center;
 }
 
+
 .greeting { 
-	background-image: url("background.png");
+	background-image: url("../img/background.png");
 	background-size: cover;
 	height: 85vh; 
 	width: 100%;
@@ -171,7 +172,7 @@ p {
 }
 
 footer { 
-	height: 700px;
+	height: 500px;
 	background-color: #111;
 	color: whitesmoke;
 	filter:opacity(90%);
@@ -277,6 +278,3 @@ h4 {
 	color: #111;
 }
 
-.centerme { 
-
-}
