--- a/css/form_styles.css
+++ b/css/form_styles.css
@@ -59,3 +59,16 @@
       width: 60%;
       margin: 150px auto;
   }
+
+  @media only screen and (max-width: 767px) {
+    .form-site .row {
+    display: block;
+    }
+    .form-site .row :nth-child(2) {
+      margin-left:0;
+    }
+
+    .contact { 
+      width: 100%;
+  }
+  }
